no longer reduce font-size of navigation buttons on smaller screens

--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -32,10 +32,5 @@
 			line-height: 1;
 			transition: transform .1s;
 		}
-
-		@media (max-width: 500px) {
-			padding: 0 .8rem;
-			font-size: 2rem;
-		}
 	}
 }
